# Cataclysm

./: .env.example  .generatelicensefile.json  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  COMPLETED.md  CONTRIBUTING.md  LICENSE  LOGO_PROMPTS.md  NOTICE  README.md  RESEARCH.md  RESEARCH_FEATURE_PLAN.md  RESEARCH_FEATURE_PLAN_v0.3.0.md  RESEARCH_FEATURE_PLAN_v0.4.0.md  RESEARCH_REPORT.md  ROADMAP.md  Roadmap_Blocked.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  TODO.md  build.py  build_targets.py  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  playwright.config.ts  sw.js  tsconfig.json  tsconfig.support.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  physics.yml  preset-request.yml
.github/workflows/: ci.yml  installed-release-smoke.yml  release.yml
assets/earth/: coastal-points.schema.json  geodesy-contract.schema.json  manifest.schema.json  surface-mask.schema.json
assets/render/: render-protocol-v1.schema.json
css/: styles.css
data/: compiled_targets.js
data/bathymetry/: README.md
docs/: ipc-api.md
docs/history/: RESEARCH_FEATURE_PLAN_v0.0.1.md  RESEARCH_FEATURE_PLAN_v0.3.0.md  RESEARCH_FEATURE_PLAN_v0.4.0.md
docs/manual/: custom-scenarios.md  getting-started.md  physics-explainer.md  presets.md
docs/release/: CODESIGNING.md  UNSIGNED_RELEASES.md
docs/science/: README.md  REFERENCES.bib  VALIDATION.md  asteroid.md  earthquake.md  fallout-dose.md  lamb_wave.md  landslide.md  meteotsunami.md  nuclear.md  shallow_water.md
js/: advanced.js  animation.js  app.js  data.js  effects.js  extras.js  heatmap.js  i18n.js  immersive.js  physics.js  premium.js  shelter.js  ww3.js
legacy/asteroid/: .gitignore  README.md  index.html  package-lock.json  vite.config.ts
legacy/nukemap/: .gitignore  README.md  RESEARCH.md  index.html  package-lock.json
public/: manifest.webmanifest  noscript.css  theme-bootstrap.js
public/physics/: cataclysm_browser_physics.wasm  manifest.json
scripts/: benchmark-renderer.mjs  browser-physics.test.mjs  build-browser-physics.mjs  build-pwa.mjs  build-release.mjs  capture-reference-scenes.mjs  capture-screenshots.mjs  check-javascript.mjs  citation-contract.mjs  citation-contract.test.mjs  deep-link-contract.test.mjs  deps-check-contract.mjs  deps-check.mjs  deps-check.test.mjs  doctor.mjs  e2e-artifact-contract.mjs  e2e-artifact-contract.test.mjs  generate-provenance.mjs  generate-sbom.mjs  generate-scenario-thumbnails.mjs  generate-third-party-notices.mjs  import-nukemap-data.mjs  inline-style-contract.mjs  inline-style-contract.test.mjs  installed-release-smoke.mjs  installed-release-smoke.test.mjs  network-trust-contract.test.mjs  product-truth-contract.mjs  product-truth-contract.test.mjs  provenance-contract.test.mjs  provenance.mjs  pwa-offline-contract.test.mjs  reference-recorder-lifecycle.mjs  reference-recorder-lifecycle.test.mjs  reference-visual-quality.mjs  reference-visual-quality.test.mjs  release-artifact-contract.mjs  release-artifact-contract.test.mjs  release-contract.mjs  run-e2e.mjs  (+23 more)
scripts/third-party-license-overrides/: bitmap-sdf-1.0.4.txt  mersenne-twister-1.1.0.txt
src/: App.tsx  index.css  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  about.toml  build.rs  deny.toml  tauri.conf.json  tauri.offline.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: direct_render_fixtures.rs  render_protocol_fixture.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/permissions/autogenerated/: quick_eta_preview.toml
src-tauri/src/: commands.rs  jpl_api.rs  lib.rs  main.rs  native_diagnostics.rs  ncei_hazel.rs  presets.rs  support_resources.rs  usgs_earthquakes.rs
src-tauri/src/commands/: direct.rs  headless.rs  observations.rs  scientific_export.rs  simulation.rs  simulation_dispatch.rs  simulation_ensemble.rs  simulation_model.rs  simulation_run.rs  simulation_stream.rs  system.rs  tests.rs  tests_observations.rs  tests_sensitivity_ensemble.rs  tests_simulation.rs  tests_solver.rs  tests_waves.rs  waves.rs
src-tauri/src/commands/scientific_export/: zarr.rs
src-tauri/src/data/: bathymetry.rs  bathymetry_cache.rs  bathymetry_import.rs  coastal_points.rs  geodesy.rs  mod.rs  source_input_contract.rs  surface.rs
src-tauri/src/physics/: asteroid.rs  constants.rs  direct_hazard.rs  direct_hazard_probe.rs  earthquake.rs  fallout.rs  lamb_wave.rs  landslide.rs  meteotsunami.rs  mod.rs  nuclear.rs  okada.rs  property_tests.rs  screening.rs  shallow_water.rs  validation.rs
src-tauri/src/physics/solver/: checkpoint.rs  gpu.rs  kernels.rs  max_field.rs  mod.rs  quality.rs
src-tauri/src/render_protocol/: codec.rs  direct_hazard.rs  hash.rs  mod.rs  recording.rs  types.rs
src-tauri/tests/: app_command_permissions.rs
src-tauri/wasm/: Cargo.toml
src-tauri/wasm/src/: lib.rs
src-tauri/wasm/src/data/: mod.rs
src/components/: AttenuationChart.tsx  BathymetryImportPanel.tsx  CitationsModal.tsx  CoastalRunupOverlay.tsx  ComparisonStories.tsx  CrashRecoveryNotice.tsx  CraterDiagram.tsx  DartOverlay.tsx  ErrorBoundary.tsx  FalloutDosePanel.tsx  FamiliarPlacePanel.tsx  FirstRunDisclaimer.tsx  Globe.tsx  GlossaryTip.tsx  GuidedLesson.tsx  HazardControls.tsx  HighlightStoryDialog.tsx  HistoricalTsunamiBrowser.tsx  LaunchExperience.tsx  LayerInspector.tsx  LocationSearch.tsx  LogViewer.tsx  MIRVPatternPanel.tsx  NeoSearch.tsx  NetworkTrustPanel.tsx  NumericField.tsx  PerformancePanel.tsx  PlanetaryDefensePanel.tsx  PointProbePanel.tsx  PresetSelector.tsx  RecentEarthquakeBrowser.tsx  ResultsPanel.tsx  RunHistory.tsx  ScenarioBuilder.tsx  SemanticDataTable.tsx  SensitivityEnsemblePanel.tsx  Settings.tsx  SimulationTransport.tsx  (+11 more)
test/: run-browser-qa.js  run-physics.js  run-url-search.js
tests/: accessibility.spec.ts  async-failure.spec.ts  csp-style-ownership.spec.ts  i18n.spec.ts  keyboard.spec.ts  pwa.spec.ts  reference-baselines.json  smoke.spec.ts  state-regression.spec.ts  visual-regression.spec.ts
(+354 files in other folders)
