[package]
name = "tsunami-simulator"
version = "0.1.0"
description = "Scientifically grounded 3D-globe desktop simulator for tsunami generation, propagation, and inundation"
authors = ["SysAdminDoc"]
license = "MIT"
repository = "https://github.com/SysAdminDoc/TsunamiSimulator"
edition = "2021"
rust-version = "1.78"

[lib]
name = "tsunami_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Physics deps
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
base64 = "0.22"
png = "0.17"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
