[package]
name = "tsunami-simulator"
version = "0.4.3"
description = "Scientifically grounded 3D-globe desktop simulator for tsunami generation, propagation, and inundation"
authors = ["SysAdminDoc"]
license = "MIT"
repository = "https://github.com/SysAdminDoc/TsunamiSimulator"
edition = "2024"
rust-version = "1.85"

[lib]
name = "tsunami_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-store = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Physics deps. The CPU SWE solver uses raw Vec<f64> + rayon par_chunks_mut;
# we'll add ndarray back when we need named axes / broadcasting (planned for
# the v0.3.0 wgpu work where the kernel binding layout maps cleanly to it).
rayon = "1.12"
base64 = "0.22"
png = "0.17"

[features]
custom-protocol = ["tauri/custom-protocol"]
# Enables the quantitative validation-harness test suite under
# physics::validation. Off by default — these tests are long-running
# (1D Stoker dam-break / Carrier-Greenspan plane-beach runup /
# Range 2022 Chicxulub far-field) and over-spec the per-PR CI loop.
# Run with `cargo test --release --features validation -- validation::`.
validation = []
# Enables the GPU SWE solver path (F-V05). Requires a discrete or
# integrated GPU adapter on the host. Falls back to CPU on adapter
# failure. Off by default — Linux CI runners may not have a usable
# Vulkan/Metal device.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies.wgpu]
version = "29.0"
optional = true
default-features = false
features = ["wgsl"]

[dependencies.pollster]
version = "0.4"
optional = true

# Zero-copy casting of the f32 grid buffers + the `GpuParams` uniform struct.
# Only pulled in with the `gpu` feature (gpu.rs is the sole user).
[dependencies.bytemuck]
version = "1"
optional = true
features = ["derive"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
