[package]
name = "cataclysm"
version = "0.10.5"
description = "Cataclysm — scientifically grounded 3D-globe multi-hazard disaster simulator (asteroid, nuclear, earthquake, landslide, tsunami)"
authors = ["SysAdminDoc"]
license = "MIT"
repository = "https://github.com/SysAdminDoc/Cataclysm"
edition = "2024"
# Floor set by wgpu/naga 29 (MSRV 1.87) and time-core 0.1.9 (MSRV 1.88).
rust-version = "1.88"

[lib]
name = "tsunami_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-store = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.4", default-features = false, features = ["query", "rustls"] }
tokio = { version = "1", features = ["sync"] }

# Physics deps. The CPU SWE solver uses raw Vec<f64> + rayon par_chunks_mut;
# ndarray can be re-added when named axes / broadcasting are needed.
rayon = "1.12"
base64 = "0.22"
png = "0.17"
# Pure-Rust local scientific-raster readers. They keep bathymetry import
# offline and avoid GDAL/libnetcdf/HDF5 runtime dependencies in installers.
geotiff-reader = { version = "0.7.0", default-features = false, features = ["local", "rayon"] }
netcdf-reader = { version = "0.8.0", features = ["cf"] }
netcdf3 = "0.6.1"
sha2 = "0.10"
# OS keychain for the Cesium ion token (Windows Credential Manager /
# macOS Keychain / Linux Secret Service). Called directly rather than via
# a thin community tauri-plugin wrapper: lower supply-chain surface, and
# tauri-plugin-stronghold is deprecated for Tauri v3.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-deep-link = "2.4.9"

[dev-dependencies]
# Property-based tests over the physics parameter space
# (tests/physics_properties.rs).
proptest = "1"
geotiff-writer = "0.7.0"
ndarray = "0.17"
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
# Internal marker used only by the dedicated minimal browser-WASM crate when it
# includes the shared physics module. The desktop package must not enable it.
browser-wasm = []
# Enables the quantitative validation-harness test suite under
# physics::validation. Off by default — these tests are long-running
# (1D Stoker dam-break / Carrier-Greenspan plane-beach runup /
# Range 2022 Chicxulub far-field) and are heavy for routine local verification.
# Run with `cargo test --release --features validation -- validation::`.
validation = []
# Enables the GPU SWE solver path (F-V05). Requires a discrete or
# integrated GPU adapter on the host. Falls back to CPU on adapter
# failure. Off by default — Linux CI runners may not have a usable
# Vulkan/Metal device.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies.wgpu]
version = "29.0"
optional = true
default-features = false
# "wgsl" alone compiles but leaves NO platform backend enabled, so
# wgpu::Instance::default() panics at the first adapter probe ("No wgpu
# backend feature that is implemented for the target platform was
# enabled") — the gpu feature had only ever been cargo-checked, never
# executed, before 2026-07-09. Backend features are platform-gated
# internally by wgpu. "dx12" is deliberately absent: wgpu-hal 29.0.x's
# dx12 suballocator does not compile against gpu-allocator 0.28 +
# windows-core 0.61/0.62 (upstream incompatibility, checked 2026-07-09);
# Vulkan covers Windows GPUs via standard drivers.
features = ["wgsl", "metal", "vulkan"]

[dependencies.pollster]
version = "0.4"
optional = true

# Zero-copy casting of the f32 grid buffers + the `GpuParams` uniform struct.
# Only pulled in with the `gpu` feature (gpu.rs is the sole user).
[dependencies.bytemuck]
version = "1"
optional = true
features = ["derive"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.3", features = ["deep-link"] }
