[package]
name = "cataclysm-browser-physics"
version = "0.14.0"
edition = "2024"
rust-version = "1.91"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["browser-wasm"]
browser-wasm = []
validation = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
